syntax = "proto3";

package geyser;

message Heartbeat {}
message EmptyRequest {}

message SubscribeAccountUpdatesRequest {
  // If true, will not stream vote account updates.
  bool skip_vote_accounts = 1;
}

message SubscribePartialAccountUpdatesRequest {
  // If true, will not stream vote account updates.
  bool skip_vote_accounts = 1;
}

message PartialAccountUpdate {
  // Slot this update occurred.
  uint64 slot = 1;

  // Account's pubkey.
  bytes pubkey = 2;

  // Account's owner.
  bytes owner = 3;

  // Flags whether this update was streamed as part of startup, hence not a realtime update.
  bool is_startup = 4;

  // A monotonically increasing number specifying the order of this update.
  // Can be used to determine what the latest update for an account was at
  // a given slot, assuming there were multiple updates.
  uint64 seq = 5;

  // Transaction signature that caused this update.
  optional string tx_signature = 6;

  // AccountReplica version.
  uint32 replica_version = 7;
}

message AccountUpdate {
  // Slot this update occurred.
  uint64 slot = 1;

  // Account's pubkey.
  bytes pubkey = 2;

  // Account's lamports post update.
  uint64 lamports = 3;

  // Account's owner.
  bytes owner = 4;

  // Flags whether an account is executable.
  bool is_executable = 5;

  // The epoch at which this account will next owe rent.
  uint64 rent_epoch = 6;

  // Account's data post update.
  bytes data = 7;

  // A monotonically increasing number specifying the order of this update.
  // Can be used to determine what the latest update for an account was at
  // a given slot, assuming there were multiple updates.
  uint64 seq = 8;

  // Flags whether this update was streamed as part of startup i.e. not a real-time update.
  bool is_startup = 9;

  // Transaction signature that caused this update.
  optional string tx_signature = 10;

  // AccountReplica version.
  uint32 replica_version = 11;
}

enum SlotUpdateStatus {
  CONFIRMED = 0;
  PROCESSED = 1;
  ROOTED = 2;
}

message SlotUpdate {
  uint64 slot = 1;
  optional uint64 parent_slot = 2;
  SlotUpdateStatus status = 3;
}

message MaybeAccountUpdate {
  oneof msg {
    AccountUpdate account_update = 1;
    Heartbeat hb = 2;
  }
}

message MaybePartialAccountUpdate {
  oneof msg {
    PartialAccountUpdate partial_account_update = 1;
    Heartbeat hb = 2;
  }
}

message GetHeartbeatIntervalResponse {
  uint64 heartbeat_interval_ms = 1;
}

// The following __must__ be assumed:
//    - Clients may receive data for slots out of order.
//    - Clients may receive account updates for a given slot out of order.
service Geyser {
  // Invoke to get the expected heartbeat interval.
  rpc GetHeartbeatInterval(EmptyRequest) returns (GetHeartbeatIntervalResponse) {}

  // Subscribes to account updates in the accounts database; additionally pings clients with empty heartbeats.
  // Upon initially connecting the client can expect a `highest_write_slot` set in the http headers.
  // Returns the highest slot seen thus far in the http headers named `highest-write-slot`.
  rpc SubscribeAccountUpdates(SubscribeAccountUpdatesRequest) returns (stream MaybeAccountUpdate) {}

  // Functions similarly to `SubscribeAccountUpdates`, but consumes less bandwidth.
  // Returns the highest slot seen thus far in the http headers named `highest-write-slot`.
  rpc SubscribePartialAccountUpdates(SubscribePartialAccountUpdatesRequest) returns (stream MaybePartialAccountUpdate) {}

  // Subscribes to slot updates.
  // Returns the highest slot seen thus far in the http headers named `highest-write-slot`.
  rpc SubscribeSlotUpdates(EmptyRequest) returns (stream SlotUpdate) {}
}
